# general_ll1

./: .gitignore  CMakeLists.txt  LICENSE  analyzer.c  analyzer.h  build.bat  build.ps1  build_test.bat  compile_commands.json  general_ll1.debugtarget  gram_parser.c  gram_parser.h  gram_spec.md  helper.py  main.c  test.gram  todos.md
datastructs/: linked_list.c  linked_list.h  linked_list_test.c  string.c  string.h  string_test.c  vector.c  vector.h  vector_test.c
gram_parser/: error.h  grammar.c  lexer.c  parser.c
samples/: math.gram  math_broken.gram  math_long.gram  sae.gram  simple.gram
src/: array_utils.c  array_utils.h  gram_parser.h  main.c  read_file_to_string.c  read_file_to_string.h  reader.c  reader.h
src/datastructs/: linked_list.h  string.c  string.h  vector.c  vector.h
src/gram_parser/: ast.c  ast.h  error.c  error.h  grammar.h  lexer.c  lexer.h  location.h  parser.c  parser.h
src/ll1_analyzer/: analyzer.c  analyzer.h  symbolic_table.c  symbolic_table.h  terminal_literal_name.c  terminal_literal_name.h
test/: broken.gram  gram.gram  math_broken.gram  simple.gram
tests/: CMakeLists.txt  linked_list_test.c  reader_test.c  string_test.c  vector_test.c
